--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
       position: relative;
       max-width: 450px;
       width: 90%;
-      max-height: 90vh;
+      max-height: 85vh;
       overflow-y: auto;
+      display: flex;
+      flex-direction: column;
     }
 
     #preview-container {
       width: 100%;
-      height: 400px;
+      height: 300px;
       border: 3px solid #4a90e2;
       border-radius: 8px;
       background: #000;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
+      flex-shrink: 0;
     }
 
     .qr-modal-title {
@@ -65,7 +68,7 @@
     .qr-scan-info {
       color: #666;
       font-size: 0.95rem;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
 
     #closeQrModal {
@@ -92,10 +95,11 @@
     .qr-result-display {
       background: #e8f5e9;
       border: 2px solid #4caf50;
-      padding: 15px;
+      padding: 12px;
       border-radius: 8px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       display: none;
+      order: -1;
     }
 
     .qr-result-display.show {
@@ -113,10 +117,10 @@
       font-weight: bold;
       color: #1565c0;
       word-break: break-all;
-      padding: 10px;
+      padding: 8px;
       background: #f5f5f5;
       border-radius: 6px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
 
     .qr-modal-buttons {
