Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
 
   <!-- 1단계: 작업자 선택 -->
   <div id="step-1" class="screen active">
+    <h1 style="color: #dc3545; font-size: 2rem; margin-bottom: 30px;">잔량관리 체크시트</h1>
     <h2>작업자 선택</h2>
     <div id="worker-list">
       <button class="btn-worker" onclick="selectWorker('오윤정')">오윤정</button>
