--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   <div id="step-2" class="screen">
     <h2>작업 유형 선택</h2>
     <p style="color: #666; margin-bottom: 20px;">수행할 작업을 선택하세요</p>
-    <button class="btn-action upload" onclick="selectActionType('투입')">📥 잔량박스에 투입</button>
+    <button class="btn-action upload" onclick="selectActionType('투입')">📥 잔량박스에 보관</button>
     <button class="btn-action use" onclick="selectActionType('사용')">📤 잔량품 사용</button>
     <button class="btn-finish" onclick="goBackToStep1()" style="background: #dc3545; margin-top: 20px;">취소</button>
   </div>
@@ -539,4 +539,5 @@
 </body>
 
 </html>
+
 
